--- a/app/src/main/res/layout/activity_jump.xml
+++ b/app/src/main/res/layout/activity_jump.xml
@@ -4,9 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/welcome"
-    tools:context=".activity.MainActivity">
-
-
+    tools:context=".activity.JumpActivity">
 
 </android.support.constraint.ConstraintLayout>
