--- a/app/src/main/res/layout/activity_jump.xml
+++ b/app/src/main/res/layout/activity_jump.xml
@@ -1,24 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activity.JumpActivity">
+
+
 <android.support.v4.view.ViewPager
     android:layout_weight="1"
     android:id="@+id/my_viewpager"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"></android.support.v4.view.ViewPager>
+    android:layout_height="wrap_content">
+
+</android.support.v4.view.ViewPager>
+
+
     <RadioGroup
+        android:id="@+id/my_rg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/dp_98"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
         <RadioButton
+            android:id="@+id/my_btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/my_btn1"
-            />
+            android:button="@null"
+            android:layout_margin="@dimen/dp_5"
+            android:background="@drawable/jump_sel"/>
+        <RadioButton
+            android:id="@+id/my_btn2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:button="@null"
+            android:layout_margin="@dimen/dp_5"
+            android:background="@drawable/jump_sel"/>
+        <RadioButton
+            android:id="@+id/my_btn3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:button="@null"
+            android:layout_margin="@dimen/dp_5"
+            android:background="@drawable/jump_sel"/>
+        <RadioButton
+            android:id="@+id/my_btn4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:button="@null"
+            android:layout_margin="@dimen/dp_5"
+            android:background="@drawable/jump_sel"/>
 
     </RadioGroup>
-</LinearLayout>
+</RelativeLayout>
