--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login"
+    android:orientation="vertical"
     tools:context=".activity.LoginActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/member_activity_login_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/dp_130"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="@dimen/dp_280"
+                android:layout_height="@dimen/dp_30"
+                android:layout_marginTop="@dimen/dp_30">
+
+                <ImageView
+                    android:layout_width="@dimen/dp_30"
+                    android:layout_height="@dimen/dp_30"
+                    android:src="@drawable/ic_phone" />
+
+                <EditText
+                    android:id="@+id/ed_login_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:background="@null"
+                    android:textColor="#ffff"
+                    android:digits="0123456789"
+                    android:ems="11"
+                    android:hint="手机号"
+                    android:imeOptions="actionNext"
+                    android:paddingLeft="@dimen/dp_50"
+                    android:textColorHint="#eeeeee" />
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"
+                android:layout_marginTop="@dimen/dp_10"
+                android:background="#ffffff" />
+
+            <RelativeLayout
+                android:layout_width="@dimen/dp_280"
+                android:layout_height="@dimen/dp_30"
+                android:layout_marginTop="@dimen/dp_30">
+
+                <ImageView
+                    android:layout_width="@dimen/dp_30"
+                    android:layout_height="@dimen/dp_30"
+                    android:src="@drawable/ic_lock" />
+
+                <EditText
+                    android:id="@+id/ed_login_password"
+                    android:layout_width="@dimen/dp_200"
+                    android:layout_height="40dp"
+                    android:textColor="#ffff"
+                    android:background="@null"
+                    android:ems="11"
+                    android:hint="登录密码"
+                    android:imeOptions="actionNext"
+                    android:paddingLeft="@dimen/dp_50"
+                    android:textColorHint="#eeeeee" />
+
+                <ToggleButton
+                    android:id="@+id/btn_ying"
+                    android:layout_width="@dimen/dp_24"
+                    android:layout_height="@dimen/dp_15"
+                    android:layout_alignParentRight="true"
+                    android:textOff=""
+                    android:textOn=""
+                    android:background="@drawable/ic_eye"
+                    android:layout_centerVertical="true" />
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"
+                android:layout_marginTop="@dimen/dp_10"
+                android:background="#ffffff" />
+
+            <LinearLayout
+                android:layout_width="@dimen/dp_300"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/save_pwd"
+                    android:textColor="#fff"
+                    android:text="记住密码"/>
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:id="@+id/zd_login"
+                    android:textColor="#fff"
+                    android:text="自动登录"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_30"
+                    android:id="@+id/btn_regirect_tiao"
+                    android:textColor="#fff"
+                    android:text="快速注册"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="@dimen/dp_280"
+            android:layout_height="@dimen/dp_40"
+            android:layout_below="@id/member_activity_login_layout"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dp_130"
+            android:background="@drawable/login_btn_shape"
+            android:text="登录"
+            android:textColor="#FFF"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="@dimen/dp_280"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dp_40"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="@dimen/dp_90"
+                android:layout_height="@dimen/dp_1"
+                android:layout_gravity="center_vertical"
+                android:background="#ffffff" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="第三方账号快速登录"
+                android:textColor="#ffffff"
+                android:textSize="@dimen/sp_12" />
+
+            <View
+                android:layout_width="@dimen/dp_90"
+                android:layout_height="@dimen/dp_1"
+                android:layout_gravity="center_vertical"
+                android:background="#ffffff" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/weixin_login"
+            android:layout_width="@dimen/dp_30"
+            android:layout_height="@dimen/dp_30"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dp_16"
+            android:src="@drawable/ic_weixin" />
+
+    </LinearLayout>
+</LinearLayout>
