--- a/app/src/main/res/drawable/ck_sel.xml
+++ b/app/src/main/res/drawable/ck_sel.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/duoxuan" android:state_checked="true"/>
-    <item android:drawable="@drawable/duokuang"/>
+    <item android:drawable="@drawable/xuan5" android:state_checked="true"/>
+    <item android:drawable="@drawable/kuang"/>
 
 </selector>
