--- a/app/src/main/res/layout/my_frag_all.xml
+++ b/app/src/main/res/layout/my_frag_all.xml
@@ -31,17 +31,18 @@
 
         <Button
             android:id="@+id/my_sign"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/dp_25"
+            android:layout_width="@dimen/dp_66"
+            android:layout_height="@dimen/dp_28"
             android:layout_below="@id/my_name"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/dp_12"
-            android:background="@android:color/holo_orange_light"
+            android:background="@drawable/my_sign_shape"
             android:text="签到"
             android:textColor="#ffffff"
             android:textSize="@dimen/sp_14" />
 
         <ImageButton
+            android:background="@android:color/transparent"
             android:layout_marginTop="@dimen/dp_20"
             android:layout_width="@dimen/dp_24"
             android:layout_height="@dimen/dp_24"
@@ -65,7 +66,7 @@
             android:id="@+id/my_message"
             android:layout_width="@dimen/dp_24"
             android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginTop="@dimen/dp_15"
             android:background="@drawable/my_messiage" />
 
@@ -92,7 +93,7 @@
             android:id="@+id/my_love"
             android:layout_width="@dimen/dp_24"
             android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginTop="@dimen/dp_15"
             android:background="@drawable/my_attention" />
 
@@ -108,7 +109,7 @@
             android:layout_toRightOf="@id/my_love"
             android:layout_width="@dimen/dp_24"
             android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_65"
+            android:layout_marginLeft="@dimen/dp_60"
             android:layout_marginTop="@dimen/dp_15"
             android:background="@drawable/my_rccord" />
 
@@ -136,7 +137,7 @@
             android:id="@+id/my_feedback"
             android:layout_width="@dimen/dp_24"
             android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginTop="@dimen/dp_15"
             android:background="@drawable/my_feedback" />
 
@@ -152,7 +153,7 @@
             android:layout_toRightOf="@id/my_feedback"
             android:layout_width="@dimen/dp_24"
             android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_65"
+            android:layout_marginLeft="@dimen/dp_60"
             android:layout_marginTop="@dimen/dp_15"
             android:background="@drawable/my_version" />
 
@@ -170,7 +171,7 @@
             android:layout_toRightOf="@id/my_version"
             android:layout_width="@dimen/dp_24"
             android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_65"
+            android:layout_marginLeft="@dimen/dp_60"
             android:layout_marginTop="@dimen/dp_15"
             android:background="@drawable/my_logout" />
 
