--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -253,7 +253,7 @@
         android:layout_width="@dimen/dp_50"
         android:layout_height="@dimen/dp_50"
         android:layout_marginLeft="@dimen/dp_24"
-        android:id="@+id/my_myinfoback"
+        android:id="@+id/my_return"
         android:layout_alignParentBottom="true"
         android:src="@drawable/ic_xiangqing_back"
         android:layout_marginBottom="@dimen/dp_26"
