--- a/app/src/main/res/layout/activity_jump.xml
+++ b/app/src/main/res/layout/activity_jump.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.JumpActivity">
+    tools:context="com.why.happy_movie.activity.JumpActivity">
 
 
 <android.support.v4.view.ViewPager
