--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/welcome"
-    tools:context=".activity.MainActivity">
+    tools:context="com.why.happy_movie.activity.MainActivity">
 
 
     <TextView
