--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".myactivity.MessageActivity">
+    tools:context="com.why.happy_movie.myactivity.MessageActivity">
 
     <TextView
         android:id="@+id/my_zl"
