--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:background="@drawable/login"
     android:layout_height="match_parent"
-    tools:context=".activity.RegisterActivity">
+    tools:context="com.why.happy_movie.activity.RegisterActivity">
 
 
     <LinearLayout
