--- a/app/src/main/res/layout/my_frag_all.xml
+++ b/app/src/main/res/layout/my_frag_all.xml
@@ -63,23 +63,34 @@
         android:background="@drawable/my_border"
         android:paddingLeft="@dimen/dp_30">
 
-        <ImageButton
-            android:id="@+id/my_message"
-            android:layout_width="@dimen/dp_24"
-            android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:layout_marginTop="@dimen/dp_15"
-            android:background="@drawable/my_messiage" />
-
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/my_message"
-            android:layout_marginTop="@dimen/dp_10"
-            android:text="我的信息" />
+            android:orientation="vertical">
+
+
+            <ImageButton
+                android:id="@+id/my_message"
+                android:layout_width="@dimen/dp_24"
+                android:layout_height="@dimen/dp_24"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dp_15"
+                android:background="@drawable/my_messiage" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                android:text="我的信息" />
+
+        </LinearLayout>
+
+
+
+
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/r3"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_86"
@@ -87,106 +98,154 @@
         android:layout_marginLeft="@dimen/dp_24"
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginRight="@dimen/dp_24"
-        android:background="@drawable/my_border"
-        android:paddingLeft="@dimen/dp_30">
+        android:background="@drawable/my_border">
 
-        <ImageButton
-            android:id="@+id/my_love"
-            android:layout_width="@dimen/dp_24"
-            android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:layout_marginTop="@dimen/dp_15"
-            android:background="@drawable/my_attention" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/my_love"
-            android:layout_marginTop="@dimen/dp_10"
-            android:text="我的关注" />
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/my_love"
+                android:layout_gravity="center"
+                android:layout_width="@dimen/dp_24"
+                android:layout_height="@dimen/dp_24"
+                android:layout_marginTop="@dimen/dp_15"
+                android:background="@drawable/my_attention" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dp_10"
+                android:text="我的关注" />
+        </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/my_rccord"
-            android:layout_toRightOf="@id/my_love"
             android:layout_width="@dimen/dp_24"
             android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_65"
+            android:layout_gravity="center"
             android:layout_marginTop="@dimen/dp_15"
             android:background="@drawable/my_rccord" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/my_rccord"
-            android:layout_toRightOf="@id/my_love"
-            android:layout_marginLeft="@dimen/dp_50"
+            android:layout_gravity="center"
             android:layout_marginTop="@dimen/dp_10"
             android:text="购票记录" />
-    </RelativeLayout>
-    <RelativeLayout
+
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"></LinearLayout>
+
+
+
+    </LinearLayout>
+    <LinearLayout
         android:id="@+id/r4"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_86"
         android:layout_below="@id/r3"
+        android:orientation="horizontal"
         android:layout_marginLeft="@dimen/dp_24"
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginRight="@dimen/dp_24"
-        android:background="@drawable/my_border"
-        android:paddingLeft="@dimen/dp_30">
+        android:background="@drawable/my_border">
 
-        <ImageButton
-            android:id="@+id/my_feedback"
-            android:layout_width="@dimen/dp_24"
-            android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:layout_marginTop="@dimen/dp_15"
-            android:background="@drawable/my_feedback" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/my_feedback"
-            android:layout_marginTop="@dimen/dp_10"
-            android:text="意见反馈" />
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/my_version"
-            android:layout_toRightOf="@id/my_feedback"
-            android:layout_width="@dimen/dp_24"
-            android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_65"
-            android:layout_marginTop="@dimen/dp_15"
-            android:background="@drawable/my_version" />
+            <ImageButton
+                android:id="@+id/my_feedback"
+                android:layout_width="@dimen/dp_24"
+                android:layout_height="@dimen/dp_24"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dp_15"
+                android:background="@drawable/my_feedback" />
 
-        <TextView
-            android:textColor="#666666"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dp_10"
+                android:text="意见反馈" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/my_version"
-            android:layout_toRightOf="@id/my_feedback"
-            android:layout_marginLeft="@dimen/dp_50"
-            android:layout_marginTop="@dimen/dp_10"
-            android:text="最新版本" />
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+
+            <ImageButton
+                android:id="@+id/my_version"
+                android:layout_width="@dimen/dp_24"
+                android:layout_height="@dimen/dp_24"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dp_15"
+                android:background="@drawable/my_version" />
+
+            <TextView
+                android:textColor="#666666"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_below="@id/my_version"
+                android:layout_toRightOf="@id/my_feedback"
+                android:layout_marginTop="@dimen/dp_10"
+                android:text="最新版本" />
+
+        </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical">
         <ImageButton
             android:id="@+id/my_logout"
             android:layout_toRightOf="@id/my_version"
             android:layout_width="@dimen/dp_24"
+            android:layout_gravity="center"
             android:layout_height="@dimen/dp_24"
-            android:layout_marginLeft="@dimen/dp_65"
             android:layout_marginTop="@dimen/dp_15"
             android:background="@drawable/my_logout" />
 
         <TextView
-
             android:textColor="#666666"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/my_logout"
+            android:layout_gravity="center"
             android:layout_toRightOf="@id/my_version"
-            android:layout_marginLeft="@dimen/dp_50"
             android:layout_marginTop="@dimen/dp_10"
             android:text="退出登录" />
-    </RelativeLayout>
+
+    </LinearLayout>
+
+
+
+    </LinearLayout>
     <!--<RadioGroup
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginLeft="@dimen/dp_24"
