--- a/app/src/main/res/drawable/my_border.xml
+++ b/app/src/main/res/drawable/my_border.xml
@@ -7,6 +7,6 @@
     <!--<solid android:color="@color/colorAccent"></solid>-->
     <corners android:radius="12dp"></corners>
     <!--<solid android:color="#80065e8d" />-->
-    <stroke android:width="1dp" android:color="#999999"/>
+    <stroke android:width="1dp" android:color="#33999999"/>
 
 </shape>
