--- a/app/src/main/res/layout/my_frag_all.xml
+++ b/app/src/main/res/layout/my_frag_all.xml
@@ -25,8 +25,7 @@
             android:layout_below="@id/my_head"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/dp_10"
-
-            android:text="冬天来了"
+            android:text="登录"
             android:textColor="#ffffff"
             android:textSize="@dimen/sp_14" />
 
