--- a/app/src/main/res/layout/home_one.xml
+++ b/app/src/main/res/layout/home_one.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1"/>
+
+    <recycler.coverflow.RecyclerCoverFlow
+        android:id="@+id/rcf_cinema_flow"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_300" />
+
 
 </LinearLayout>
