--- a/app/src/main/res/layout/dianying_item.xml
+++ b/app/src/main/res/layout/dianying_item.xml
@@ -1,18 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginRight="@dimen/dp_20"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_gravity="center"
-        android:layout_width="@dimen/dp_158"
-        android:layout_height="@dimen/dp_223">
+        android:layout_width="@dimen/dp_126"
+        android:layout_height="@dimen/dp_164">
 
        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/simp_cinema_flow"
-            android:layout_width="@dimen/dp_158"
-            android:layout_height="@dimen/dp_223"
+            android:layout_width="@dimen/dp_126"
+            android:layout_height="@dimen/dp_164"
+           android:background="#fff"
             app:roundedCornerRadius="@dimen/dp_8" />
 
         <LinearLayout
@@ -32,17 +34,6 @@
                 android:text="1111111"
                 android:textSize="@dimen/sp_16" />
 
-            <TextView
-                android:id="@+id/text_cinema_flow2"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/dp_36"
-                android:layout_alignParentBottom="true"
-                android:layout_marginRight="@dimen/dp_10"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textColor="#fff"
-                android:text="106分钟"
-                android:textSize="@dimen/sp_12" />
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
