--- a/app/src/main/res/layout/home_one.xml
+++ b/app/src/main/res/layout/home_one.xml
@@ -1,12 +1,278 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="#fff"
     android:layout_height="match_parent">
 
-    <recycler.coverflow.RecyclerCoverFlow
-        android:id="@+id/rcf_cinema_flow"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_300" />
+        android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/dianyingbeijing1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_30"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="@dimen/dp_24"
+                android:layout_height="@dimen/dp_24"
+                android:layout_marginLeft="@dimen/dp_20"
+                android:src="@drawable/com_icon_loc_white_default"/>
 
 
+            <TextView
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#fff"
+                android:textSize="@dimen/sp_14"
+                android:text="北京"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/search_shape"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/sou"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_3"
+                    android:layout_marginBottom="@dimen/dp_3"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="@dimen/dp_10"
+                    android:src="@drawable/com_icon_search_default"/>
+                <EditText
+                    android:id="@+id/et_sou"
+                    android:layout_width="@dimen/dp_150"
+                    android:background="@null"
+                    android:textSize="@dimen/sp_10"
+                    android:hint="输入要搜索的影片"
+                    android:layout_gravity="center_vertical"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
+                <TextView
+                    android:id="@+id/tv_sou"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#ffff"
+                    android:visibility="gone"
+                    android:layout_gravity="center_vertical"
+                    android:textSize="@dimen/sp_10"
+                    android:text="搜索"/>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+
+        <recycler.coverflow.RecyclerCoverFlow
+            android:id="@+id/rcf_cinema_flow"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_223"
+            android:layout_marginTop="@dimen/dp_85"/>
+
+    </RelativeLayout>
+
+        <!--  111111111111111111111111111111111111111111111111-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/dp_20"
+        android:layout_marginLeft="@dimen/dp_24"
+        android:layout_marginRight="@dimen/dp_24"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/sp_16"
+                    android:textColor="#333333"
+                    android:text="热门电影"/>
+                <View
+                    android:layout_width="@dimen/dp_33"
+                    android:layout_height="@dimen/dp_2"
+                    android:layout_marginTop="@dimen/dp_2"
+                    android:background="@drawable/shape_shou_lien"/>
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <ImageView
+                android:layout_width="@dimen/dp_14"
+                android:layout_height="@dimen/dp_14"
+                android:layout_gravity="center"
+                android:src="@drawable/com_icon_next_default"/>
+
+        </LinearLayout>
+
+
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/xlist"
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/dp_20"
+            android:layout_height="@dimen/dp_164"></android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+
+        <!--11111111111111111111111111111111111111111111111111111111111-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/dp_20"
+            android:layout_marginLeft="@dimen/dp_24"
+            android:layout_marginRight="@dimen/dp_24"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/sp_16"
+                        android:textColor="#333333"
+                        android:text="正在热映"/>
+                    <View
+                        android:layout_width="@dimen/dp_33"
+                        android:layout_height="@dimen/dp_2"
+                        android:layout_marginTop="@dimen/dp_2"
+                        android:background="@drawable/shape_shou_lien"/>
+
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="@dimen/dp_14"
+                    android:layout_height="@dimen/dp_14"
+                    android:layout_gravity="center"
+                    android:src="@drawable/com_icon_next_default"/>
+
+            </LinearLayout>
+
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/xlist2"
+                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/dp_20"
+                android:layout_height="@dimen/dp_164"></android.support.v7.widget.RecyclerView>
+
+        </LinearLayout>
+
+        <!--1111111111111111111111111111111111111111111111111-->
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/dp_20"
+            android:layout_marginLeft="@dimen/dp_24"
+            android:layout_marginRight="@dimen/dp_24"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/sp_16"
+                        android:textColor="#333333"
+                        android:text="即将上映"/>
+                    <View
+                        android:layout_width="@dimen/dp_33"
+                        android:layout_height="@dimen/dp_2"
+                        android:layout_marginTop="@dimen/dp_2"
+                        android:background="@drawable/shape_shou_lien"/>
+
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="@dimen/dp_14"
+                    android:layout_height="@dimen/dp_14"
+                    android:layout_gravity="center"
+                    android:src="@drawable/com_icon_next_default"/>
+
+            </LinearLayout>
+
+
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/xlist3"
+                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/dp_20"
+                android:layout_height="@dimen/dp_164"
+                android:layout_marginBottom="@dimen/dp_100"></android.support.v7.widget.RecyclerView>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
